data/all_generated_tests/raw_wast_tests/br_IncorrectBranchTargetResolution_55.wast
;; 6. **Test Description: Consecutive Labels**    - Define consecutive `block` structures and issue a `br` instruction targeting the label of the second block.

(assert_invalid
  (module
    (func (block (block (br 1))))
  )
  "label out of bounds"
)